--- a/employee.ui
+++ b/employee.ui
@@ -1893,7 +1893,7 @@ QTextEdit {
       <string/>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_2">
+    <widget class="QLineEdit" name="name">
      <property name="enabled">
       <bool>true</bool>
      </property>
@@ -1937,7 +1937,7 @@ QTextEdit {
       <string>Nom</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_3">
+    <widget class="QLineEdit" name="lastname">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -2095,7 +2095,7 @@ QTextEdit {
       <string/>
      </property>
     </widget>
-    <widget class="QDateEdit" name="dateEdit">
+    <widget class="QDateEdit" name="dob">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -2118,7 +2118,7 @@ QTextEdit {
       <string>sexe</string>
      </property>
     </widget>
-    <widget class="QComboBox" name="comboBox">
+    <widget class="QComboBox" name="gender">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -2127,8 +2127,18 @@ QTextEdit {
        <height>22</height>
       </rect>
      </property>
+     <item>
+      <property name="text">
+       <string>Male</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Female</string>
+      </property>
+     </item>
     </widget>
-    <widget class="QComboBox" name="comboBox_2">
+    <widget class="QComboBox" name="post">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -2137,8 +2147,23 @@ QTextEdit {
        <height>22</height>
       </rect>
      </property>
+     <item>
+      <property name="text">
+       <string>Admin</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>RH</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Logistics</string>
+      </property>
+     </item>
     </widget>
-    <widget class="QTimeEdit" name="timeEdit">
+    <widget class="QTimeEdit" name="starttime">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -2148,7 +2173,7 @@ QTextEdit {
       </rect>
      </property>
     </widget>
-    <widget class="QTimeEdit" name="timeEdit_2">
+    <widget class="QTimeEdit" name="endtime">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -2158,7 +2183,7 @@ QTextEdit {
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit">
+    <widget class="QLineEdit" name="login">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -2168,7 +2193,7 @@ QTextEdit {
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_4">
+    <widget class="QLineEdit" name="password">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -2178,7 +2203,7 @@ QTextEdit {
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_5">
+    <widget class="QLineEdit" name="salary">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -2734,22 +2759,22 @@ QTextEdit {
     <zorder>add_btn_5</zorder>
     <zorder>label_10</zorder>
     <zorder>label_5</zorder>
-    <zorder>lineEdit_2</zorder>
-    <zorder>lineEdit_3</zorder>
+    <zorder>name</zorder>
+    <zorder>lastname</zorder>
     <zorder>label_3</zorder>
     <zorder>label_4</zorder>
     <zorder>label_7</zorder>
-    <zorder>dateEdit</zorder>
+    <zorder>dob</zorder>
     <zorder>label_11</zorder>
     <zorder>pushButton_4</zorder>
     <zorder>label_12</zorder>
-    <zorder>comboBox</zorder>
-    <zorder>comboBox_2</zorder>
-    <zorder>timeEdit</zorder>
-    <zorder>timeEdit_2</zorder>
-    <zorder>lineEdit</zorder>
-    <zorder>lineEdit_4</zorder>
-    <zorder>lineEdit_5</zorder>
+    <zorder>gender</zorder>
+    <zorder>post</zorder>
+    <zorder>starttime</zorder>
+    <zorder>endtime</zorder>
+    <zorder>login</zorder>
+    <zorder>password</zorder>
+    <zorder>salary</zorder>
     <zorder>label</zorder>
     <zorder>label_2</zorder>
     <zorder>label_8</zorder>
