--- a/emission.ui
+++ b/emission.ui
@@ -2739,6 +2739,19 @@ QTextEdit {
     <zorder>label_6</zorder>
     <zorder>pushButton_3</zorder>
    </widget>
+   <widget class="QLabel" name="tempLabel">
+    <property name="geometry">
+     <rect>
+      <x>790</x>
+      <y>60</y>
+      <width>231</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
    <zorder>widget</zorder>
    <zorder>label</zorder>
    <zorder>tableWidget_2</zorder>
@@ -2749,6 +2762,7 @@ QTextEdit {
    <zorder>playVideoButton</zorder>
    <zorder>label_8</zorder>
    <zorder>widget_2</zorder>
+   <zorder>tempLabel</zorder>
   </widget>
  </widget>
  <resources/>
