chat box working

--- a/chatbox.ui
+++ b/chatbox.ui
@@ -86,7 +86,7 @@ padding: 2px;</string>
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>270</x>
