--- a/contract.ui
+++ b/contract.ui
@@ -16,9 +16,9 @@
   <widget class="QTableWidget" name="tableWidget">
    <property name="geometry">
     <rect>
-     <x>590</x>
+     <x>450</x>
      <y>230</y>
-     <width>601</width>
+     <width>831</width>
      <height>321</height>
     </rect>
    </property>
@@ -117,9 +117,9 @@ QTableWidget QTableWidget::item:selected {
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
+     <y>0</y>
      <width>61</width>
-     <height>721</height>
+     <height>781</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -155,9 +155,9 @@ QTableWidget QTableWidget::item:selected {
     <property name="geometry">
      <rect>
       <x>5</x>
-      <y>31</y>
+      <y>11</y>
       <width>41</width>
-      <height>651</height>
+      <height>751</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -182,9 +182,9 @@ QTableWidget QTableWidget::item:selected {
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>40</y>
+     <y>10</y>
      <width>331</width>
-     <height>691</height>
+     <height>761</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -207,7 +207,7 @@ QTextEdit {
       <x>0</x>
       <y>0</y>
       <width>291</width>
-      <height>651</height>
+      <height>761</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -231,7 +231,7 @@ QTextEdit {
     <property name="geometry">
      <rect>
       <x>9</x>
-      <y>42</y>
+      <y>90</y>
       <width>191</width>
       <height>30</height>
      </rect>
@@ -255,7 +255,7 @@ QTextEdit {
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
+      <y>70</y>
       <width>61</width>
       <height>16</height>
      </rect>
@@ -272,7 +272,7 @@ QTextEdit {
     <property name="geometry">
      <rect>
       <x>9</x>
-      <y>111</y>
+      <y>140</y>
       <width>191</width>
       <height>30</height>
      </rect>
@@ -296,7 +296,7 @@ QTextEdit {
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>80</y>
+      <y>120</y>
       <width>48</width>
       <height>16</height>
      </rect>
@@ -313,7 +313,7 @@ QTextEdit {
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>150</y>
+      <y>180</y>
       <width>141</width>
       <height>16</height>
      </rect>
@@ -332,7 +332,7 @@ QTextEdit {
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>220</y>
+      <y>230</y>
       <width>50</width>
       <height>16</height>
      </rect>
@@ -353,8 +353,8 @@ QTextEdit {
    <widget class="QPushButton" name="add_btn">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>600</y>
+      <x>50</x>
+      <y>720</y>
       <width>151</width>
       <height>34</height>
      </rect>
@@ -408,7 +408,7 @@ QTextEdit {
       <x>250</x>
       <y>0</y>
       <width>41</width>
-      <height>651</height>
+      <height>761</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -430,7 +430,7 @@ QTextEdit {
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>290</y>
+      <y>280</y>
       <width>81</width>
       <height>16</height>
      </rect>
@@ -443,30 +443,20 @@ QTextEdit {
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>320</y>
+      <y>300</y>
       <width>231</width>
       <height>191</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>570</y>
-      <width>121</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>signature</string>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
    </widget>
    <widget class="QComboBox" name="idE">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>530</y>
+      <x>140</x>
+      <y>30</y>
       <width>62</width>
       <height>22</height>
      </rect>
@@ -475,8 +465,8 @@ QTextEdit {
    <widget class="QComboBox" name="idS">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>530</y>
+      <x>20</x>
+      <y>30</y>
       <width>62</width>
       <height>22</height>
      </rect>
@@ -486,7 +476,7 @@ QTextEdit {
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>180</y>
+      <y>200</y>
       <width>110</width>
       <height>22</height>
      </rect>
@@ -496,10 +486,36 @@ QTextEdit {
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>240</y>
+      <y>250</y>
       <width>110</width>
       <height>22</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="sign">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>520</y>
+      <width>231</width>
+      <height>131</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>true</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 5px 10px;
+    color: black;
+}
+</string>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
    <zorder>label_5</zorder>
@@ -514,11 +530,11 @@ QTextEdit {
    <zorder>pushButton_4</zorder>
    <zorder>label_10</zorder>
    <zorder>desc</zorder>
-   <zorder>pushButton</zorder>
    <zorder>idE</zorder>
    <zorder>idS</zorder>
    <zorder>dated</zorder>
    <zorder>datef</zorder>
+   <zorder>sign</zorder>
   </widget>
  </widget>
  <resources/>
