--- a/equipment.ui
+++ b/equipment.ui
@@ -19,8 +19,8 @@
   <widget class="QWidget" name="equipement" native="true">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>0</y>
+     <x>-30</x>
+     <y>-10</y>
      <width>1471</width>
      <height>771</height>
     </rect>
@@ -511,8 +511,8 @@
    <widget class="QPushButton" name="Ajout">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>40</y>
+      <x>600</x>
+      <y>60</y>
       <width>91</width>
       <height>31</height>
      </rect>
@@ -1333,7 +1333,7 @@ QTextEdit {
     <zorder>label_6</zorder>
     <zorder>pushButton_3</zorder>
    </widget>
-   <widget class="QPushButton" name="pdfButton_5">
+   <widget class="QPushButton" name="pdfButton_4">
     <property name="geometry">
      <rect>
       <x>620</x>
@@ -1416,7 +1416,7 @@ QPushButton:checked {
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="pdfButton_4">
+   <widget class="QPushButton" name="pdfButton_5">
     <property name="geometry">
      <rect>
       <x>420</x>
@@ -1945,16 +1945,72 @@ QLineEdit:focus {
      <string>Search...</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="google">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>650</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Google</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="amazon">
+    <property name="geometry">
+     <rect>
+      <x>880</x>
+      <y>650</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Amazon</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="visual_impact">
+    <property name="geometry">
+     <rect>
+      <x>980</x>
+      <y>650</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Visual Impact</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>640</y>
+      <width>241</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Chercher sur les sites partenaires :</string>
+    </property>
+   </widget>
    <zorder>widget_3</zorder>
    <zorder>Label</zorder>
    <zorder>Labelequipment</zorder>
    <zorder>Ajout</zorder>
    <zorder>tableWidget_2</zorder>
    <zorder>widget_2</zorder>
-   <zorder>pdfButton_5</zorder>
    <zorder>pdfButton_4</zorder>
+   <zorder>pdfButton_5</zorder>
    <zorder>search_input</zorder>
    <zorder>label_15</zorder>
+   <zorder>google</zorder>
+   <zorder>visual_impact</zorder>
+   <zorder>label</zorder>
+   <zorder>amazon</zorder>
   </widget>
  </widget>
  <resources/>
