--- a/contract.ui
+++ b/contract.ui
@@ -16,10 +16,10 @@
   <widget class="QTableWidget" name="tableWidget">
    <property name="geometry">
     <rect>
-     <x>450</x>
+     <x>340</x>
      <y>230</y>
-     <width>831</width>
-     <height>321</height>
+     <width>941</width>
+     <height>411</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -96,7 +96,7 @@ QTableWidget QTableWidget::item:selected {
     <rect>
      <x>400</x>
      <y>70</y>
-     <width>431</width>
+     <width>561</width>
      <height>41</height>
     </rect>
    </property>
@@ -116,8 +116,8 @@ QTableWidget QTableWidget::item:selected {
   <widget class="QWidget" name="widget_2" native="true">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>0</y>
+     <x>-20</x>
+     <y>10</y>
      <width>61</width>
      <height>781</height>
     </rect>
@@ -181,7 +181,7 @@ QTableWidget QTableWidget::item:selected {
   <widget class="QWidget" name="widget_3" native="true">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>0</x>
      <y>10</y>
      <width>331</width>
      <height>761</height>
@@ -502,7 +502,7 @@ QTextEdit {
      </rect>
     </property>
     <property name="autoFillBackground">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel {
